fixed width overflow

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -219,6 +219,7 @@
         display: flex;
         justify-content: center;
         width: 100vw;
+        max-width: 100%;
         height: 100vh;
         margin-top: 5rem;
         top: 0;
@@ -260,6 +261,7 @@
                         top: 0;
                         margin-top: 5rem;
                         left: 0;
+                        max-width: 100%;
                         width: 100vw;
                         box-shadow: $box-shadow;
                         height: 24.5rem;
